Number separator added asterisk button changed to backspace button Enable RTL support in manifest(UI not ready yet)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="No8">8</string>
     <string name="No9">9</string>
     <string name="No0">0</string>
-    <string name="Asterisk">*</string>
+    <string name="Clear">C</string>
     <string name="Ok">Ok</string>
     <string name="SlideToUnlock">Slide to unlock</string>
     <string name="pin_entry">Enter Pin</string>
