Cleaning using Lint

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="No9">9</string>
     <string name="No0">0</string>
     <string name="Clear">C</string>
-    <string name="Ok">Ok</string>
+    <string name="Ok">OK</string>
     <string name="SlideToUnlock">Slide to unlock</string>
     <string name="pin_entry">Enter Pin</string>
     <string name="NumberEntry">Please enter the recipient number:</string>
