--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -8,7 +8,7 @@
     <string name="EnableApp">فعال کردن</string>
     <string name="RecipientNumber">شماره گیرنده</string>
     <string name="agree">می پذیرم</string>
-    <string name="aboutUsText">اتشکر از ن.امامی و خواهرم</string>
+    <string name="aboutUsText">باتشکر از ن.امامی و خواهرم</string>
     <string name="disagree">نمی پذیرم</string>
     <string name="DisableApp">غیرفعال کردن</string>
     <string name="eula">از آنجاییکه برای برنامه بصورت رایگان پروانه صادر شده است هیچ تعهدی برای برنامه - تا آنجا که قوانین جاری موجودند - وجود ندارد. برنامه "همان است که هست" بدون هیچ گونه تعهدی در هر زمینه ای، چه با برداشت شفاهی و یا ضمنی، چه تجاری و یا سازگاری، مگر وقتی که خلاف این مساله توسط صاحبان اصلی و یا توزیع کنندگان ثالث مکتوب شده باشد. تمام مخاطرات مرتبط با کیفیت و کارآیی برنامه در ارتباط مستقیم با شما ست.
